{
  "version": 4,
  "terraform_version": "0.12.16",
  "serial": 42,
  "lineage": "fbe8c67d-460a-1ec5-b674-12cc1dc610ef",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_internal_terraform",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "udp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2019-11-28T00:24:44.352-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "id": "projects/dryicepoc-242713/global/firewalls/allow-internal-terraform",
            "name": "allow-internal-terraform",
            "network": "https://www.googleapis.com/compute/v1/projects/dryicepoc-242713/global/networks/terraform-vpc",
            "priority": 1000,
            "project": "dryicepoc-242713",
            "self_link": "https://www.googleapis.com/compute/v1/projects/dryicepoc-242713/global/firewalls/allow-internal-terraform",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "dependencies": [
            "google_compute_network.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh_terraform",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2019-11-28T00:24:43.955-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "id": "projects/dryicepoc-242713/global/firewalls/allow-ssh-terraform",
            "name": "allow-ssh-terraform",
            "network": "https://www.googleapis.com/compute/v1/projects/dryicepoc-242713/global/networks/terraform-vpc",
            "priority": 1000,
            "project": "dryicepoc-242713",
            "self_link": "https://www.googleapis.com/compute/v1/projects/dryicepoc-242713/global/firewalls/allow-ssh-terraform",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "ssh"
            ],
            "timeouts": null
          },
          "dependencies": [
            "google_compute_network.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "instance-terraform-1",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/rhel-cloud/global/images/rhel-7-v20190916",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/dryicepoc-242713/zones/us-west1-a/disks/instance-terraform-1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/dryicepoc-242713/zones/us-west1-a/instances/instance-terraform-1",
            "instance_id": "3265629229818198665",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata_fingerprint": "V7y6rcj_ff8=",
            "name": "instance-terraform-1",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.212.235.157",
                    "network_tier": "STANDARD"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/dryicepoc-242713/global/networks/terraform-vpc",
                "network_ip": "10.2.0.2",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/dryicepoc-242713/regions/us-west1/subnetworks/terraform-subnet",
                "subnetwork_project": "dryicepoc-242713"
              }
            ],
            "project": "dryicepoc-242713",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/dryicepoc-242713/zones/us-west1-a/instances/instance-terraform-1",
            "tags": [
              "ssh"
            ],
            "tags_fingerprint": "pfSjJj1RiUg=",
            "zone": "us-west1-a"
          },
          "dependencies": [
            "google_compute_network.terraform_vpc",
            "google_compute_subnetwork.terraform_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "terraform_vpc",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/dryicepoc-242713/global/networks/terraform-vpc",
            "name": "terraform-vpc",
            "project": "dryicepoc-242713",
            "routing_mode": "GLOBAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/dryicepoc-242713/global/networks/terraform-vpc"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "terraform_subnet",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2019-11-28T00:24:44.368-08:00",
            "fingerprint": "tDLXEKPjjhY=",
            "gateway_address": "10.2.0.1",
            "id": "projects/dryicepoc-242713/regions/us-west1/subnetworks/terraform-subnet",
            "ip_cidr_range": "10.2.0.0/16",
            "name": "terraform-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/dryicepoc-242713/global/networks/terraform-vpc",
            "private_ip_google_access": false,
            "project": "dryicepoc-242713",
            "region": "us-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/dryicepoc-242713/regions/us-west1/subnetworks/terraform-subnet"
          },
          "dependencies": [
            "google_compute_network.terraform_vpc"
          ]
        }
      ]
    }
  ]
}